# SmartFloorHeating

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  ToDo.md
app/: CMakeLists.txt  main.cpp  test.json
cmake/: AddGitSubmodule.cmake  Warnings.cmake  crossarmv6l.cmake  crossraspi64.cmake
doc/autostart/: Readme.md  smartfloorheating.service
doc/devel-info/: HomeAssistantApi.md  readme.md  tempsensor.md
etc/smartfloorheating/: connectiontempapi.json  floorheatingconfig.json  response.json  responseTokenError.json
etc/smartfloorheating/tuya_api/: tuyaDeviceInfos.json
include/smartfloorheading/: Construction.hpp  SmartFloorHeater.hpp
include/smartfloorheating/: HeatingConstruction.hpp  Option.hpp  SmartFloorHeater.hpp  mini.hpp
src/: Builder.cpp  Builder.hpp  CMakeLists.txt  Input.cpp  Input.hpp  InputHAClimate.cpp  InputHAClimate.hpp  Operational.cpp  Operational.hpp  Option.cpp  Output.cpp  Output.hpp  Simulation.cpp  Simulation.hpp  SmartFloorHeater.cpp  Thermostat.cpp  Thermostat.hpp  Thermostate.cpp  Thermostate.hpp  TwoLevelController.cpp  TwoLevelController.hpp  mini.cpp  mini.hpp
utils/: copybin.sh
